--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,12 @@ body {
     width: 100%;
     height: 100%;
     // overflow-y: scroll;
+    scroll-behavior: smooth;
 }
+
+// #root {
+//     scroll-behavior: auto;
+// }
 
 a {
     text-decoration: none;
